ont-api: changes in OntGraphModel, review stream operations (#85), some minor refactoring (change imports methods, etc), update tests